# seal

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  Makefile  README.md  dev-setup.sh  skills-lock.json  vercel.json
.agents/skills/ai/: SKILL.md
.agents/skills/ai-python-basics/: SKILL.md
.agents/skills/ai-python-custom-loop/: SKILL.md
.agents/skills/ai-python-custom-provider/: SKILL.md
.agents/skills/ai-python-durable-execution/: SKILL.md
.agents/skills/ai-python-serverless-execution/: SKILL.md
.agents/skills/ai-python-streaming-tools/: SKILL.md
.agents/skills/ai-python-subagents/: SKILL.md
.agents/skills/ai-python-ui-adapter/: SKILL.md
.agents/skills/langfuse/: SKILL.md
.agents/skills/langfuse/references/: v4-project-migration.md
.github/workflows/: ci.yml
backend/: agent.py  db.py  main.py  pyproject.toml  sessions.py  stream_store.py  workflows.py
backend/agent/: __init__.py  client.py  driver.py  durable_session.py  durable_stream.py  main.py  proto.py  server.py  session.py  storage.py  stream.py  telemetry.py  trigger.py  turn.py  util.py
backend/app/: attachments.py  chat.py  server.py  sessions.py  test_model.py  worker.py
backend/core/: db.py  durable_agent.py  main.py  resumable_stream.py  sessions.py  stream_store.py
backend/durable_agent/: __init__.py  _client.py  _server.py  _worker.py  chat.py  driver.py  proto.py  session.py  sessions.py  storage.py  stream.py  turn.py
backend/routers/: chat.py  session.py  sessions.py
backend/sessions/: __init__.py  core.py  entries.py  jsonl.py  postgres.py
backend/sessions2/: __init__.py  entries.py  storage.py  tree.py
backend/tests/: conftest.py  harness.py  test_agent_loop.py  test_chat_persistence.py  test_contract.py  test_durable_stream.py  test_resumable_stream.py  test_stream_store.py  test_workflows.py  turn_capture.py
backend/tests/agent/: test_driver.py  test_proto.py  test_storage.py  test_stream.py  test_telemetry.py  test_turn.py
backend/tests/app/: test_chat.py  test_server.py
common_fixtures/mixed-subagents-approvals/: approval_request.json  sse.txt  ui_messages.json
common_fixtures/parallel-approvals/: approval_request.json  sse.txt  ui_messages.json
common_fixtures/parallel-subagents/: sse.txt  ui_messages.json
e2e/: package.json  pnpm-lock.yaml  run-ls-date.mjs  test.mjs
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/e2e/: chat-approvals.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: session-sidebar.tsx
frontend/src/components/ai-elements/: message.tsx  tool.tsx
frontend/src/components/ui/: tooltip.tsx
frontend/src/hooks/: session-api.ts  use-session-manager.ts
frontend/src/lib/: approvals.ts
frontend/tests/: contract.test.ts
