[project]
name = "backend"
version = "0.1.0"
description = "Seal – personal AI assistant backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "vercel>=0.5.9",
    "asyncpg>=0.29.0",
    "httpx>=0.28.1",
    "ai",
    "vercel",
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.ty.environment]
python-version = "3.13"
root = ["./"]

[tool.ruff]
target-version = "py313"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30

[tool.uv]
exclude-newer = "2 days"

[tool.uv.sources]
ai = { git = "https://github.com/vercel-labs/ai-python", branch = "main" }
vercel = { git = "https://github.com/vercel/vercel-py", branch = "seal-workflow-dev" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.5",
    "ty~=0.0.37",
]
