[project]
name = "backend"
version = "0.1.0"
description = "Seal – personal AI assistant backend"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "vercel>=0.5.9",
    "asyncpg>=0.29.0",
    "httpx>=0.28.1",
    "ai[otel]",
    "vercel",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
]

[tool.vercel]
entrypoint = "app.server:app"

[[tool.vercel.workflows]]
entrypoint = "app.worker:workflow"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.ty.environment]
python-version = "3.13"
root = ["./"]

[tool.ruff]
target-version = "py313"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30

[tool.uv]
exclude-newer = "2 days"
exclude-newer-package = { ai = false, vercel = false, vercel-cache = false, vercel-headers = false, vercel-internal-telemetry = false, vercel-oidc = false }

[tool.uv.sources]
# the reworked telemetry (serializable spans + push + sinks), not yet on main.
ai = { git = "https://github.com/vercel-labs/ai-python.git", branch = "durable-telemetry-2" }
vercel = { git = "https://github.com/vercel/vercel-py", branch = "main", subdirectory = "src/vercel" }
vercel-cache = { git = "https://github.com/vercel/vercel-py", branch = "main", subdirectory = "src/vercel-cache" }
vercel-headers = { git = "https://github.com/vercel/vercel-py", branch = "main", subdirectory = "src/vercel-headers" }
vercel-oidc = { git = "https://github.com/vercel/vercel-py", branch = "main", subdirectory = "src/vercel-oidc" }
vercel-internal-telemetry = { git = "https://github.com/vercel/vercel-py", branch = "main", subdirectory = "src/vercel-internal-telemetry" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.5",
    "ty~=0.0.37",
]
